# glplusplus

./: CMakeLists.txt  README.md  library.h
include/: primitive_type.h  shader.h  vertex_array.h  vertex_buffer.h
include/gl++/: gl++.h  primitive_type.h  shader.h  vertex_array.h  vertex_buffer.h
src/: shader.cpp  vertex_array.cpp  vertex_buffer.cpp
test/: CMakeLists.txt  test.cpp
